Fix layout issue in admin.
Fixes #32

--- a/app/assets/stylesheets/admin/_layout.scss
+++ b/app/assets/stylesheets/admin/_layout.scss
@@ -13,6 +13,7 @@
 .admin-body {
   display: flex;
   flex: 1;
+  max-height: 100%;
 }
 
 .admin-left-column {
